too lazy to make a message1