@@ -16,7 +16,7 @@ public class WorkstationRecipes
     @Nullable
     public static WorkstationRecipe getRecipe(EntityType<?> entityType, Level world)
     {
-        List<WorkstationRecipe> recipes = world.getRecipeManager().getRecipes().stream().filter(recipe -> recipe.getType() == RecipeTypes.WORKSTATION).map(recipe -> (WorkstationRecipe) recipe).collect(Collectors.toList());
+        List<WorkstationRecipe> recipes = world.getRecipeManager().getRecipes().stream().filter(recipe -> recipe.getType() == RecipeTypes.WORKSTATION).map(recipe -> (WorkstationRecipe) recipe).toList();
         return recipes.stream().filter(recipe -> recipe.getVehicle() == entityType).findFirst().orElse(null);
     }
 }
